# blas-lapack-rs-test

./: Cargo.toml
.cargo/: config.toml
src/: main.rs
